# KadeDB

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CI_CD_SUMMARY.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CTestPresets.json  Dockerfile  ENV.example  LICENSE  README.md  TODO.md  codecov.yml  requirements-build.txt  requirements-docs.txt  test_simple_ffi
.cache/asan-latest/: asan_ctest_output.txt  asan_gdb_bt.txt
.cache/gdb-latest/: gdb_release_bt.txt
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  docs.yml  release.yml
.taskmaster/: state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
.windsurf/workflows/: continue.md  tpscp.md
bindings/c/: CMakeLists.txt  COMPLETION_SUMMARY.md  FFI_GUIDE.md  IMPLEMENTATION_GUIDE.md
bindings/c/include/kadedb/: examples.h  kadedb.h  kadedb_ffi_helpers.h
bindings/c/src/: examples.cpp  kadedb_c.cpp  kadedb_ffi_helpers.cpp
bindings/c/test/: CMakeLists.txt  c_error_cases_test.c  crud_bindings_test.c  ffi_helpers_edgecases_test.c  ffi_helpers_roundtrip_test.c  ffi_validation_test.c  resultset_access_test.c  simple_ffi_test.c
cmake/: KadeDBConfig.cmake.in  README.md  cmake_uninstall.cmake.in  dependencies.cmake
cmake/Modules/: FindANTLR4.cmake  FindRocksDB.cmake
cpp/: CMakeLists.txt
cpp/bench/: query_bench.cpp  serialization_bench.cpp
cpp/examples/: graph_example.cpp  inmemory_rel_errors_example.cpp  inmemory_rel_example.cpp  kadeql_example.cpp  timeseries_example.cpp
cpp/include/kadedb/: core.h  gpu.h  gpu_transfer.h  kadeql.h  kadeql_ast.h  kadeql_parser.h  kadeql_tokenizer.h  predicate_builder.h  query_executor.h  result.h  schema.h  serialization.h  status.h  storage.h  value.h  version.h.in
cpp/include/kadedb/graph/: query.h  schema.h  storage.h
cpp/include/kadedb/timeseries/: storage.h
cpp/src/core/: graph_query.cpp  graph_storage.cpp  kadeql_ast.cpp  kadeql_parser.cpp  kadeql_tokenizer.cpp  query_executor.cpp  schema.cpp  serialization.cpp  storage.cpp  timeseries_storage.cpp  value.cpp  version.cpp
cpp/src/gpu/: gpu.cpp  gpu_transfer.cpp
cpp/test/: CMakeLists.txt  c_api_constraints_test.c  c_api_table_constraints_test.c  c_api_table_schema_wrapper_test.c  combined_storage_integration_test.cpp  concurrency_test.cpp  constraints_test.cpp  copy_move_test.cpp  document_error_cases_test.cpp  document_predicates_test.cpp  document_schema_test.cpp  document_storage_api_test.cpp  graph_test.cpp  kadeql_aggregation_test.cpp  kadeql_basic_bench.cpp  kadeql_computed_update_test.cpp  kadeql_end_to_end_test.cpp  kadeql_executor_integration_test.cpp  kadeql_insert_integration_test.cpp  kadeql_mixed_projection_reversed_test.cpp  kadeql_not_predicates_test.cpp  kadeql_optimizer_canonicalization_test.cpp  kadeql_test.cpp  kadeql_unknown_column_predicate_test.cpp  kadeql_update_delete_integration_test.cpp  relational_error_cases_test.cpp  result_utils_test.cpp  row_shallow_test.cpp  row_unique_test.cpp  schema_result_test.cpp  serialization_test.cpp  smoke_test.cpp  storage_api_test.cpp  storage_predicates_test.cpp  timeseries_test.cpp  value_test.cpp
diagnostics/: README.md
docs/: Doxyfile  README.md  dependency_management.md  design-notes.md  development_guidelines.md  optimizer.md
docs/sphinx/: conf.py  document_api.rst  graph_api.rst  index.rst  overview.md  quick_links.md  relational_api.rst  services_api.rst  timeseries_api.rst
docs/sphinx/guides/: contributing.md  getting_started.md  troubleshooting.md
examples/: CMakeLists.txt
examples/c_example/: CMakeLists.txt  README.md  main.c
examples/cpp_example/: CMakeLists.txt  README.md  main.cpp
examples/lite_cli/: CMakeLists.txt  README.md  main.c
include/kadedb/: config.h.in
include/kadedb/core/: db.h  export.h
install/include/kadedb/: core.h  kadedb.h  version.h
install/lib/: libkadedb_c.so.0  libkadedb_c.so.0.1.0  libkadedb_core.so.0  libkadedb_core.so.0.1.0  libkadedb_lite.so.0  libkadedb_lite.so.0.1.0
lite/: CMakeLists.txt
lite/include/kadedb_lite/: kadedb_lite.h  kadedb_lite_query.h  kadedb_lite_sync.h
lite/src/: kadedb_lite.c  kadedb_lite_internal.h  kadedb_lite_query.c  kadedb_lite_sync.c
lite/test/: CMakeLists.txt  lite_kv_test.c  lite_query_test.c  lite_smoke_test.c  lite_sync_test.c
scripts/: PRD-1.txt  PRD-2.txt  PRD-3.txt  PRD-4.txt  PRD.txt  prd_index.txt  prd_phase_1_mvp.txt  prd_phase_2_services_hpc.txt  prd_phase_3_multimodel_compliance.txt  prd_phase_4_release_extensibility.txt  verify_build.sh  verify_dependencies.sh
services/: Cargo.toml
services/api/: Cargo.toml
services/api/src/: lib.rs  main.rs
services/api/tests/: http_integration.rs
services/auth/: Cargo.toml
services/auth/src/: lib.rs
services/examples/: Cargo.toml
services/examples/src/: main.rs
services/ffi/: Cargo.toml  build.rs
services/ffi/src/: lib.rs
services/grpc/: Cargo.toml  build.rs
services/grpc/src/: lib.rs  main.rs
services/grpc/tests/: grpc_integration.rs
services/proto/: kadedb.proto
src/core/: CMakeLists.txt  kadedb.cpp
src/core/storage/: CMakeLists.txt
src/core/storage/include/kadedb/storage/: crc32c.h  file_manager.h  file_manager_internal.h  span.h
src/core/storage/include/kadedb/storage/page/: page.h  page_header.h  page_id.h  page_manager.h  page_type.h
src/core/storage/src/: file_manager.cpp
src/core/storage/src/page/: page.cpp  page_manager.cpp
src/lite/: CMakeLists.txt
src/lite/cmake/: KadeDBLiteConfig.cmake.in
src/lite/src/: main.c
src/server/: CMakeLists.txt
src/server/cmake/: KadeDBConfig.cmake.in  cmake_uninstall.cmake.in
src/server/src/: main.cpp
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
test/: CMakeLists.txt  README.md
test/benchmark/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/storage/: CMakeLists.txt  file_manager_test.cpp  page_manager_test.cpp
(+3 files in other folders)
